--- a/Flask/templates/benjiFlaskTest.html
+++ b/Flask/templates/benjiFlaskTest.html
@@ -5,12 +5,17 @@
     </head>
     <body>
         <form method="POST">
-            <label for="mP">Mass of projectile:</label>
-            <input name="mP" />
+            <label for="userMass">Mass of projectile (in grams):</label>
+            <input name="userMass" />
             <label for="distance">Desired launch distance (in feet):</label>
             <input name="distance" /><br /><br />
             <button>Submit</button>
-            <p>{{msg}}</p>
+            <p>{{msg0}}</p>
+            <p>{{msg1}}</p>
+            <p>{{msg2}}</p>
+            <p>{{msg3}}</p>
+            <p>{{msg4}}</p>
+            <p>{{msg5}}</p>
         </form>
     </body>
 </html>
